Rewrite readme, intro vignette

--- a/README.Rmd
+++ b/README.Rmd
@@ -31,29 +31,45 @@ national map:
 
 ```{r johns_brook_basic}
 library(spacey)
-automap(44.121268, -73.903734)
+example_map <- automap(44.121268, -73.903734)
+example_map
 ```
 
 As well as letting you incorporate overlay textures from ESRI's MapServer API:
 
 ```{r johns_brook_overlay}
-automap(44.121268, -73.903734, overlay = "World_Imagery")
+example_map$update_values(overlay = "World_Imagery")
 ```
 
 And optionally even turn these into 3D visualizations:
 
 ```{r johns_brook_3d}
-automap(44.121268,
-  -73.903734,
-  overlay = "World_Imagery",
-  method = "3d"
-)
+example_map$method <- "3d"
+example_map
+```
+
+All of these can also work with the `future` package to speed up processing, 
+letting you iterate on your map designs faster:
+
+```{r}
+library(future)
+plan("sequential")
+tictoc::tic()
+example_map <- automap(44.121268, -73.903734)
+tictoc::toc()
+```
+
+```{r}
+plan("multisession")
+tictoc::tic()
+example_map <- automap(44.121268, -73.903734)
+tictoc::toc()
 ```
 
 And while `automap` tries to make it easy to configure these maps, `spacey` also
-lets you save off your heightmaps and overlays directly, either through 
-arguments to `automap` or the functions `get_heightmap` and `get_overlay`, so 
-that you can work directly with `rayshader` to make these maps by yourself.
+lets you save off your heightmaps and overlays directly through the functions 
+`get_heightmap` and `get_overlay`, so that you can work directly with 
+`rayshader` to make these maps by yourself.
 
 There's a lot more to these three functions, alongside a few basic geospatial 
 utilities `spacey` implements to make it easier to make maps from your data. For 
@@ -71,8 +87,8 @@ install.packages("spacey")
 You can always get the most up-to-date development version with:
 
 ``` r
-# install.packages("devtools")
-devtools::install_github("mikemahoney218/spacey")
+# install.packages("remotes")
+remotes::install_github("mikemahoney218/spacey")
 ```
 
 ## Functions
